--- a/index.html
+++ b/index.html
@@ -4,13 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Javascript</title>:
+    <title>Javascript</title>
     <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <script defer src="./js/funciones.js" type="text/javascript"></script>
     <script defer src="./js/script.js" type="text/javascript"></script>
 </head>
 <body>
+    <!--Poner foto personal en esquina-->
+    <!-------------------Header----------------->
+    <div class="header">
+        <div class="titulo">
+            <h3>Fundamentos de js</h3>
+            <h4>Desarrollo WEB en entorno del cliente</h4>
+            <h5>Portfolio</h5>
+        </div>
+
+        <div class="picture">
+            <picture></picture>
+        </div>
+
+    </div>
+
+
+    <!------------------Menu-------------------->
+
+    <div class="topnav">
+        <a href="https://www.w3schools.com/js/default.asp">w3schools</a>"
+        <a href="https://es.javascript.info/js">javascript.info</a>
+        <a href="https://developer.mozilla.org/es/docs/Web/JavaScript">MDN</a>
+        <a href="https://github.com/JuanFranCM/DWECRepositorie">GitHub</a>
+    </div>
+
+
+    <!------------------Main content------------->
+
+    <div class="container">
+
+        <div class="card">
+
+            <div class="cardTitle">Titulo ej 1</div>
+            <div class="cardBody">
+                <p>Contenido ej 1</p>
+            </div>
+            <div class="cardFooter">
+                <a href="">&gt;&gt;Solución</a>
+            </div>
+
+        </div>
+
+
+        <div class="card">
+
+            <div class="cardTitle">Titulo ej 1</div>
+            <div class="cardBody">
+                <p>Contenido ej 1</p>
+            </div>
+            <div class="cardFooter">
+                <a href="">&gt;&gt;Solución</a>
+            </div>
+
+        </div>
+
+
+
+        <div class="card">
+
+            <div class="cardTitle">Titulo ej 1</div>
+            <div class="cardBody">
+                <p>Contenido ej 1</p>
+            </div>
+            <div class="cardFooter">
+                <a href="">&gt;&gt;Solución</a>
+            </div>
+
+        </div>
+
+
+    </div>
+
+
+
+
+    <!----------------Footer-------------------->
+
+    <div class="footer">
+        ©Juan Francisco Chacón Macías
+    </div>
     
 </body>
 </html>
