--- a/ejercicios/ejercicio02/index.html
+++ b/ejercicios/ejercicio02/index.html
@@ -4,18 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Javascript</title>
-    <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
-    <script defer src="./js/functions.js" type="text/javascript"></script>
+    <link href="../../img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="../../css/style.css" rel="stylesheet" type="text/css" />
+    <script defer src="../../js/functions.js" type="text/javascript"></script>
+    <script defer src="../../js/script.js" type="text/javascript"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-
-
 <body>
     <!--Poner foto personal en esquina-->
     <!-------------------Header----------------->
-    <div class="header bg-primary">
+    <div class="header">
         <div class="titulo">
             <h3>Fundamentos de js</h3>
             <h4>Desarrollo WEB en entorno del cliente</h4>
@@ -31,9 +30,9 @@
 
     <!------------------Menu-------------------->
 
-    <nav class="navbar navbar-expand-lg bg-primary-subtle ">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Inicio</a>
+          <a class="navbar-brand" href="../../index.html">Inicio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -80,34 +79,20 @@
     <div class="container">
 
 
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 1</h5>
-              <p class="card-text">Descripción del ejercicio 1</p>
-              <a href="./ejercicios/ejercicio01/index.html" class="btn btn-primary">Solución</a>
-            </div>
+      <div class="card">
+        <!--<img src="..." class="card-img-top" alt="...">-->
+        <div class="card-body">
+          <h5 class="card-title">Descripción del ejercicio 2</h5>
+          <button id="boton" type="button" class="btn btn-secondary">Púlsame</button>
+          <p class="card-text">Indicaciones del ejercicio 02</p>
+          <p class="card-text">Resultado:</p>
+          <p class="card-text" id="resultado" name="02">(Aquí mostraremos el <strong>resultado</strong> del ejercicio 02)</p>
+          <a href="../../index.html" class="btn btn-primary">Página principal</a>
         </div>
+    </div>
 
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 2</h5>
-              <p class="card-text">Descripción del ejercicio 2</p>
-              <a href="./ejercicios/ejercicio02/index.html" class="btn btn-primary">Solución</a>
-            </div>
-        </div>
 
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 3</h5>
-              <p class="card-text">Descripción del ejercicio 3</p>
-              <a href="#" class="btn btn-primary">Solución</a>
-            </div>
-        </div>
 
-        </div>
 
 
     </div>
