--- a/index.html
+++ b/index.html
@@ -1,125 +1,139 @@
 <!DOCTYPE html>
 <html lang="es">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Javascript</title>
-    <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
-    <script defer src="./js/functions.js" type="text/javascript"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Javascript</title>
+  <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <script defer src="./js/functions.js" type="text/javascript"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-    <!--Poner foto personal en esquina-->
-    <!-------------------Header----------------->
-    <div class="header bg-primary">
-        <div class="titulo">
-            <h3>Fundamentos de js</h3>
-            <h4>Desarrollo WEB en entorno del cliente</h4>
-            <h5>Portfolio</h5>
-        </div>
+  <!-------------------Header----------------->
+  <div class="header container-fluid text-center">
+    <div class="row">
 
-        <div class="picture">
-            <picture></picture>
-        </div>
+      <div class="col-12 col-md-4">
+        <img src="./img/js.png" class="img-thumbnail imagen" alt="Js">
+      </div>
+
+      <div class="titulo col-12 col-md-4">
+        <h3>Fundamentos de JS</h3>
+        <h4>Desarrollo WEB en entorno del cliente</h4>
+      </div>
+
+      <div class="col col-12-md-4">
+        <img src="./img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
+      </div>
 
     </div>
+  </div>
 
 
-    <!------------------Menu-------------------->
 
-    <nav class="navbar navbar-expand-lg bg-primary-subtle ">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Inicio</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <!------------------Navbar-------------------->
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://www.w3schools.com/js/default.asp">W3Schools</a>
-              </li>
+  <nav class="navbar navbar-expand-lg">
 
-              <li class="nav-item">
-                <a class="nav-link active" href="https://es.javascript.info/js">Javascript.info</a>
-              </li>
+    <div class="container-fluid">
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://developer.mozilla.org/es/docs/Web/JavaScript">MDN</a>
-              </li>
+      <a class="navbar-brand text-light" href="./index.html">Inicio</a>
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://github.com/JuanFranCM/DWECRepositorie">GitHub</a>
-              </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Actividades
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Actividad 1</a></li>
-                  <li><a class="dropdown-item" href="#">Actividad 2</a></li>
-                </ul>
-              </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://www.w3schools.com/js/default.asp">W3Schools</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="https://es.javascript.info/js">Javascript.info</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://developer.mozilla.org/es/docs/Web/JavaScript">MDN</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://github.com/JuanFranCM/DWECRepositorie">GitHub</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Actividades
+            </a>
+            <ul class="dropdown-menu desplegable">
+              <li><a class="dropdown-item" href="./ejercicios/ejercicio01/index.html">Actividad 1</a></li>
+              <li><a class="dropdown-item" href="./ejercicios/ejercicio02/index.html">Actividad 2</a></li>
             </ul>
+          </li>
 
-          </div>
-
-        </div>
-
-      </nav>
-
-
-    <!------------------Main content------------->
-
-    <div class="container">
-
-
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 1</h5>
-              <p class="card-text">Descripción del ejercicio 1</p>
-              <a href="./ejercicios/ejercicio01/index.html" class="btn btn-primary">Solución</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 2</h5>
-              <p class="card-text">Descripción del ejercicio 2</p>
-              <a href="./ejercicios/ejercicio02/index.html" class="btn btn-primary">Solución</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <!--<img src="..." class="card-img-top" alt="...">-->
-            <div class="card-body">
-              <h5 class="card-title">Ejercicio 3</h5>
-              <p class="card-text">Descripción del ejercicio 3</p>
-              <a href="#" class="btn btn-primary">Solución</a>
-            </div>
-        </div>
-
-        </div>
+        </ul>
+      </div>
 
 
     </div>
 
+  </nav>
 
 
+  <!------------------Main content------------->
 
-    <!----------------Footer-------------------->
+  <div class="container">
 
-    <div class="footer">
-        ©Juan Francisco Chacón Macías
+
+    <div class="card">
+
+      <!--<img src="..." class="card-img-top" alt="...">-->
+      <div class="card-body">
+        <h5 class="card-title">Ejercicio 1</h5>
+        <p class="card-text">Descripción del ejercicio 1</p>
+        <a href="./ejercicios/ejercicio01/index.html" class="btn botEj">Solución</a>
+      </div>
+
     </div>
+
+    <div class="card">
+
+      <!--<img src="..." class="card-img-top" alt="...">-->
+      <div class="card-body">
+        <h5 class="card-title">Ejercicio 2</h5>
+        <p class="card-text">Descripción del ejercicio 2</p>
+        <a href="./ejercicios/ejercicio02/index.html" class="btn botEj">Solución</a>
+      </div>
+
+    </div>
+
+    <div class="card">
+
+      <!--<img src="..." class="card-img-top" alt="...">-->
+      <div class="card-body">
+        <h5 class="card-title">Ejercicio 3</h5>
+        <p class="card-text">Descripción del ejercicio 3</p>
+        <a href="#" class="btn botEj">Solución</a>
+      </div>
+
+    </div>
+
+
+  </div>
+
+
+
+
+  <!----------------Footer-------------------->
+
+  <div class="footer container-fluid">
+    Bootstrap ©Juan Francisco Chacón Macías
+  </div>
     
 </body>
 </html>
