--- a/ejercicios/ejercicio02/index.html
+++ b/ejercicios/ejercicio02/index.html
@@ -1,98 +1,128 @@
 <!DOCTYPE html>
 <html lang="es">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Javascript</title>
-    <link href="../../img/favicon.ico" rel="icon" type="image/x-icon">
-    <link href="../../css/style.css" rel="stylesheet" type="text/css" />
-    <script defer src="../../js/functions.js" type="text/javascript"></script>
-    <script defer src="../../js/script.js" type="text/javascript"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Javascript</title>
+  <link href="../../img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="../../css/style.css" rel="stylesheet" type="text/css" />
+  <script defer src="../../js/functions.js" type="text/javascript"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script defer src="../../js/login.js"></script>
+  <script defer src="../../js/script.js" type="text/javascript"></script>
 </head>
 
 
 
 
 <body>
-  <!-------------------Header----------------->
-  <div class="header container-fluid text-center">
-    <div class="row">
-
-      <div class="col-12 col-md-4">
-        <img src="../../img/js.png" class="img-thumbnail imagen" alt="Js">
-      </div>
-
-      <div class="titulo col-12 col-md-4">
-        <h3>Fundamentos de JS</h3>
-        <h4>Desarrollo WEB en entorno del cliente</h4>
-      </div>
-
-      <div class="col col-12-md-4">
-        <img src="../../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
-      </div>
-
-    </div>
-  </div>
 
 
 
-  <!------------------Navbar-------------------->
+    <!-------------------Login------------------>
 
-  <nav class="navbar navbar-expand-lg">
+    <div class="form-container" id="loginForm">
+      <p class="title">Login</p>
+      <form class="form" >
 
-    <div class="container-fluid">
+        <div class="input-group">
+          <label for="username">Usuario:</label>
+        <input type="text" id="username" name="username" value="usuario" required>
+        </div>
 
-      <a class="navbar-brand text-light" href="../../index.html">Inicio</a>
-      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <div class="input-group">
+          <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" value="contraseña" required>
+        </div>
 
+        <input class="sign" type="button" value="Ingresar"></input>
+        <!--<button class="sign">Sign in</button>-->
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://www.w3schools.com/js/default.asp">W3Schools</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" href="https://es.javascript.info/js">Javascript.info</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://developer.mozilla.org/es/docs/Web/JavaScript">MDN</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://github.com/JuanFranCM/DWECRepositorie">GitHub</a>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Actividades
-            </a>
-            <ul class="dropdown-menu desplegable">
-              <li><a class="dropdown-item" href="../ejercicio01/index.html">Actividad 1</a></li>
-              <li><a class="dropdown-item" href="./index.html">Actividad 2</a></li>
-            </ul>
-          </li>
-
-        </ul>
-      </div>
-
-
+      </form>
     </div>
 
-  </nav>
+  <div id="contenidoCompleto">
+
+
+    <!-------------------Header----------------->
+    <div class="header container-fluid text-center">
+      <div class="row">
+
+        <div class="col-12 col-md-4">
+          <img src="../../img/js.png" class="img-thumbnail imagen" alt="Js">
+        </div>
+
+        <div class="titulo col-12 col-md-4">
+          <h3>Fundamentos de JS</h3>
+          <h4>Desarrollo WEB en entorno del cliente</h4>
+        </div>
+
+        <div class="col col-12-md-4">
+          <img src="../../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
+        </div>
+
+      </div>
+    </div>
+
+
+
+    <!------------------Navbar-------------------->
+
+    <nav class="navbar navbar-expand-lg">
+
+      <div class="container-fluid">
+
+        <a class="navbar-brand text-light" href="../../index.html">Inicio</a>
+        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="https://www.w3schools.com/js/default.asp">W3Schools</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" href="https://es.javascript.info/js">Javascript.info</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="https://developer.mozilla.org/es/docs/Web/JavaScript">MDN</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="https://github.com/JuanFranCM/DWECRepositorie">GitHub</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Actividades
+              </a>
+              <ul class="dropdown-menu desplegable">
+                <li><a class="dropdown-item" href="../ejercicio01/index.html">Actividad 1</a></li>
+                <li><a class="dropdown-item" href="./index.html">Actividad 2</a></li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+
+
+      </div>
+
+    </nav>
 
 
 
 
-  <!------------------Main content------------->
+    <!------------------Main content------------->
 
-    <div class="container">
+    <div class="container" id="mainContent">
 
 
       <div class="card">
@@ -105,7 +135,7 @@
           <p class="card-text" id="resultado" name="02">(Aquí mostraremos el <strong>resultado</strong> del ejercicio 02)</p>
           <a href="../../index.html" class="btn botEj">Página principal</a>
         </div>
-    </div>
+      </div>
 
 
 
@@ -119,8 +149,9 @@
     <!----------------Footer-------------------->
 
     <div class="footer">
-        ©Juan Francisco Chacón Macías
+      ©Juan Francisco Chacón Macías
     </div>
     
+  </div>
 </body>
 </html>
