--- a/ejercicios/Number/conversorbases/index.html
+++ b/ejercicios/Number/conversorbases/index.html
@@ -5,13 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Javascript</title>
-  <link href="../../img/favicon.ico" rel="icon" type="image/x-icon">
-  <link href="../../css/style.css" rel="stylesheet" type="text/css" />
-  <script defer src="../../js/functions.js" type="text/javascript"></script>
+  <link href="../../../img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="../../../css/style.css" rel="stylesheet" type="text/css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script defer src="../../js/login.js"></script>
-  <script defer src="../../js/script.js" type="text/javascript"></script>
+
+
+  <script defer src="../../../js/deleteCookie.js" type="text/javascript"></script>
+  <script defer src="../../../js/getCookie.js" type="text/javascript"></script>
+  <script defer src="../../../js/setCookie.js" type="text/javascript"></script>
+  <script defer src="../../../js/login.js" type="text/javascript"></script>
+  <script defer src="./js/scripts.js" type="text/javascript"></script>
 </head>
 
 
@@ -22,6 +26,26 @@
 
 
     <!-------------------Login------------------>
+
+    <!-- <div class="form-container" id="loginForm">
+      <p class="title">Login</p>
+      <form class="form" >
+
+        <div class="input-group">
+          <label for="username">Usuario:</label>
+        <input type="text" id="username" name="username" value="usuario" required>
+        </div>
+
+        <div class="input-group">
+          <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" value="contraseña" required>
+        </div>
+
+        <input class="sign" type="button" value="Ingresar" id="logButton"></input>
+
+
+      </form>
+    </div> -->
 
     <div class="form-container" id="loginForm">
       <p class="title">Login</p>
@@ -37,7 +61,7 @@
         <input type="password" id="password" name="password" value="contraseña" required>
         </div>
 
-        <input class="sign" type="button" value="Ingresar"></input>
+        <input id="submit" class="sign" type="button" value="Ingresar"></input>
         <!--<button class="sign">Sign in</button>-->
 
       </form>
@@ -51,16 +75,17 @@
       <div class="row">
 
         <div class="col-12 col-md-4">
-          <img src="../../img/js.png" class="img-thumbnail imagen" alt="Js">
+          <img src="../../../img/js.png" class="img-thumbnail imagen" alt="Js">
         </div>
 
         <div class="titulo col-12 col-md-4">
+
           <h3>Fundamentos de JS</h3>
           <h4>Desarrollo WEB en entorno del cliente</h4>
         </div>
 
         <div class="col col-12-md-4">
-          <img src="../../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
+          <img src="../../../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
         </div>
 
       </div>
@@ -74,7 +99,7 @@
 
       <div class="container-fluid">
 
-        <a class="navbar-brand text-light" href="../../index.html">Inicio</a>
+        <a class="navbar-brand text-light" href="../../../index.html">Inicio</a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -104,9 +129,13 @@
                 Actividades
               </a>
               <ul class="dropdown-menu desplegable">
-                <li><a class="dropdown-item" href="../ejercicio01/index.html">Actividad 1</a></li>
-                <li><a class="dropdown-item" href="./index.html">Actividad 2</a></li>
+                <li><a class="dropdown-item" href="../minicalculadora/index.html">Minicalculadora</a></li>
+                <li><a class="dropdown-item" href="./index.html">Conversor de bases</a></li>
               </ul>
+            </li>
+
+            <li class="nav-item">
+              <button type="button" id="logout">Logout</button>
             </li>
 
           </ul>
@@ -126,20 +155,22 @@
 
 
       <div class="card">
-        <!--<img src="..." class="card-img-top" alt="...">-->
-        <div class="card-body">
-          <h5 class="card-title">Descripción del ejercicio 2</h5>
-          <button id="boton" type="button" class="btn btn-secondary">Púlsame</button>
-          <p class="card-text">Indicaciones del ejercicio 02</p>
-          <p class="card-text">Resultado:</p>
-          <p class="card-text" id="resultado" name="02">(Aquí mostraremos el <strong>resultado</strong> del ejercicio 02)</p>
-          <a href="../../index.html" class="btn botEj">Página principal</a>
-        </div>
+          <!--<img src="..." class="card-img-top" alt="...">-->
+          <div class="card-body">
+            <h5 class="card-title">Conversor de bases</h5>
+            <form id="calculadora">
+              <input id="valor" type="number" name="valor">
+
+              <input id="binario" type="button" name="binario" value="/2">
+              <input id="octal" type="button" name="octal" value="/8">
+              <input id="hexadecimal" type="button" name="hexadecimal" value="/16">
+            </form>
+
+            <p class="card-text" >Resultado: <strong id="resultado"></strong></p>
+
+            <a href="../../../index.html" class="btn botEj">Página principal</a>
+          </div>
       </div>
-
-
-
-
 
     </div>
 
