--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <title>Javascript</title>
   <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
   <link href="./css/style.css" rel="stylesheet" type="text/css" />
-  <script defer src="./js/functions.js" type="text/javascript"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
+  
+  <script defer src="./js/deleteCookie.js" type="text/javascript"></script>
+  <script defer src="./js/getCookie.js" type="text/javascript"></script>
+  <script defer src="./js/setCookie.js" type="text/javascript"></script>
   <script defer src="./js/login.js"></script>
-  <!-- <script defer src="./js/script.js" type="text/javascript"></script> -->
 </head>
 
 
@@ -34,7 +37,7 @@
         <input type="password" id="password" name="password" value="contraseña" required>
         </div>
 
-        <input class="sign" type="button" value="Ingresar"></input>
+        <input id="submit" class="sign" type="button" value="Ingresar"></input>
         <!--<button class="sign">Sign in</button>-->
 
       </form>
@@ -99,10 +102,16 @@
                 Actividades
               </a>
               <ul class="dropdown-menu desplegable">
-                <li><a class="dropdown-item" href="./ejercicios/ejercicio01/index.html">Actividad 1</a></li>
-                <li><a class="dropdown-item" href="./ejercicios/ejercicio02/index.html">Actividad 2</a></li>
+                <li><a class="dropdown-item" href="./ejercicios/Number/minicalculadora/index.html">Minicalculadora</a></li>
+                <li><a class="dropdown-item" href="./ejercicios/Number/conversorbases/index.html">Conversor bases</a></li>
               </ul>
             </li>
+
+
+            <li class="nav-item">
+              <button type="button" id="logout">Logout</button>
+            </li>
+
 
           </ul>
         </div>
