loginout cookies y loadexercise

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -5,48 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Javascript</title>
-  <link href="../../../img/favicon.ico" rel="icon" type="image/x-icon">
-  <link href="../../../css/style.css" rel="stylesheet" type="text/css" />
+  <link href="../img/favicon.ico" rel="icon" type="image/x-icon">
+  <link href="../css/style.css" rel="stylesheet" type="text/css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  
 
-  <script defer src="../../../js/getCookie.js" type="text/javascript"></script>
-  <script defer src="../../../js/cookie.js" type="text/javascript"></script>
+  <script defer src="../js/getCookie.js" type="text/javascript"></script>
+  <script defer src="../js/cookie.js" type="text/javascript"></script>
+  <script defer src="./js/loadExercise.js" type="text/javascript"></script>
+  <script defer src="./js/script.js" type="text/javascript"></script>
 
-  <script defer src="../../js/loadExercise.js" type="text/javascript"></script>
-  <script defer src="../../js/script.js" type="text/javascript"></script>
+  <script defer src="../js/deleteCookie.js" type="text/javascript"></script>
 
+  <script defer src="../js/setCookie.js" type="text/javascript"></script>
 
-  <script defer src="../../../js/deleteCookie.js" type="text/javascript"></script>
+  <script defer src="../js/logout.js" type="text/javascript"></script>
 
-  <script defer src="../../../js/setCookie.js" type="text/javascript"></script>
-  <script defer src="./js/scripts.js" type="text/javascript"></script>
-  <script defer src="../../../js/logout.js" type="text/javascript"></script>
 
 </head>
-
-
 
 
 <body>
 
 
+  
   <!-------------------Header----------------->
   <div class="header container-fluid text-center">
     <div class="row">
 
       <div class="col-12 col-md-4">
-        <img src="../../../img/js.png" class="img-thumbnail imagen" alt="Js">
+        <img src="../img/js.png" class="img-thumbnail imagen" alt="Js">
       </div>
 
       <div class="titulo col-12 col-md-4">
-
         <h3>Fundamentos de JS</h3>
         <h4>Desarrollo WEB en entorno del cliente</h4>
       </div>
 
       <div class="col col-12-md-4">
-        <img src="../../../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
+        <img src="../img/photo.jpg" class="img-thumbnail imagen" alt="Foto de perfil">
       </div>
 
     </div>
@@ -60,7 +58,7 @@
 
     <div class="container-fluid">
 
-      <a class="navbar-brand text-light" href="../../index.html">Inicio</a>
+      <a class="navbar-brand text-light" href="./index.html">Inicio</a>
       <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -90,14 +88,16 @@
               Actividades
             </a>
             <ul class="dropdown-menu desplegable">
-              <li><a class="dropdown-item" href="../../index.html" id="minicalculadora">Minicalculadora</a></li>
-              <li><a class="dropdown-item" href="../../index.html" id="conversorbases">Conversor bases</a></li>
+              <li><a class="dropdown-item" href="#" id="minicalculadora">Minicalculadora</a></li>
+              <li><a class="dropdown-item" href="#" id="conversorbases">Conversor bases</a></li>
             </ul>
           </li>
+
 
           <li class="nav-item">
             <button type="button" id="logout">Logout</button>
           </li>
+
 
         </ul>
       </div>
@@ -108,41 +108,23 @@
   </nav>
 
 
-
-
   <!------------------Main content------------->
+<!--<img src="..." class="card-img-top" alt="...">-->
+  <div class="container d-flex" id="contenido">
 
-  <div class="container" id="mainContent">
-
-
-    <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Conversor de bases</h5>
-          <form id="calculadora">
-            <input id="valor" type="number" name="valor">
-
-            <input id="binario" type="button" name="binario" value="/2">
-            <input id="octal" type="button" name="octal" value="/8">
-            <input id="hexadecimal" type="button" name="hexadecimal" value="/16">
-          </form>
-
-          <p class="card-text" >Resultado: <strong id="resultado"></strong></p>
-
-          <a href="../../../index.html" class="btn botEj">Página principal</a>
-        </div>
-    </div>
+    <p>Selecciona una opción del menú para ver los ejercicios.</p>
 
   </div>
 
-
-
-
+  
+  
   <!----------------Footer-------------------->
 
-  <div class="footer">
-    ©Juan Francisco Chacón Macías
+  <div class="footer container-fluid">
+    Bootstrap ©Juan Francisco Chacón Macías
   </div>
-    
+
   
+    
 </body>
 </html>
