--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -29,9 +29,16 @@
 <body>
 
 
+
+
   
   <!-------------------Header----------------->
   <div class="header container-fluid text-center">
+
+    <div class="logoutButton">
+    <a  id="logout">Logout</a>
+    </div>
+
     <div class="row">
 
       <div class="col-12 col-md-4">
@@ -48,6 +55,10 @@
       </div>
 
     </div>
+
+  
+
+    
   </div>
 
 
@@ -85,17 +96,12 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Actividades
+              NUM
             </a>
             <ul class="dropdown-menu desplegable">
               <li><a class="dropdown-item" href="#" id="minicalculadora">Minicalculadora</a></li>
               <li><a class="dropdown-item" href="#" id="conversorbases">Conversor bases</a></li>
             </ul>
-          </li>
-
-
-          <li class="nav-item">
-            <button type="button" id="logout">Logout</button>
           </li>
 
 
@@ -108,6 +114,8 @@
   </nav>
 
 
+
+
   <!------------------Main content------------->
 <!--<img src="..." class="card-img-top" alt="...">-->
   <div class="container d-flex" id="contenido">
@@ -117,7 +125,7 @@
   </div>
 
   
-  
+
   <!----------------Footer-------------------->
 
   <div class="footer container-fluid">
