correccion href de calculadora y conversor

--- a/ejercicios/Number/minicalculadora/index.html
+++ b/ejercicios/Number/minicalculadora/index.html
@@ -138,7 +138,7 @@
 
           <p class="card-text" >Resultado: <strong id="resultado"></strong></p>
 
-          <a href="../../../index.html" class="btn botEj">Página principal</a>
+          <a href="../../index.html" class="btn botEj">Página principal</a>
         </div>
     </div>
 
