--- a/ejercicios/Number/conversorbases/index.html
+++ b/ejercicios/Number/conversorbases/index.html
@@ -127,7 +127,7 @@
 
           <p class="card-text" >Resultado: <strong id="resultado"></strong></p>
 
-          <a href="../../../index.html" class="btn botEj">Página principal</a>
+          <a href="../../index.html" class="btn botEj">Página principal</a>
         </div>
     </div>
 
