--- a/ejercicios/String/modTextAPI/index.html
+++ b/ejercicios/String/modTextAPI/index.html
@@ -10,10 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
-  <script defer src="../../../js/indexDB.js" type="text/javascript"></script>
-  <script defer src="../../../js/getIndexDB.js" type="text/javascript"></script>
-  <script defer src="../../../js/deleteIndexDB.js" type="text/javascript"></script>
-  <script defer src="../../../js/setIndexDB.js" type="text/javascript"></script>
+  <script defer src="../../../js/getLocalStorage.js" type="text/javascript"></script>
+  <script defer src="../../../js/localStorage.js" type="text/javascript"></script>
+  <script defer src="../../../js/deleteLocalStorage.js" type="text/javascript"></script>
+  <script defer src="../../../js/setLocalStorage.js" type="text/javascript"></script>
 
   <script defer src="./js/api.js" type="text/javascript"></script>
   <script defer src="../js/functions.js" type="text/javascript"></script>
