--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -126,6 +126,19 @@
           </li>
 
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              CRUD
+            </a>
+            <ul class="dropdown-menu desplegable">
+              <li><a class="dropdown-item" href="#" id="crudCookie">Crud Cookies</a></li>
+              <li><a class="dropdown-item" href="#" id="crudLocalStorage">Crud localStorage</a></li>
+              <li><a class="dropdown-item" href="#" id="crudSessionStorage">Crud SessionStorage</a></li>
+              <li><a class="dropdown-item" href="#" id="crudIndexedDB">Crud indexedDB+API</a></li>
+            </ul>
+          </li>
+
+
         </ul>
       </div>
 
