--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -139,6 +139,18 @@
           </li>
 
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Estructuras
+            </a>
+            <ul class="dropdown-menu desplegable">
+              <li><a class="dropdown-item" href="#" id="pila">Pila</a></li>
+              <li><a class="dropdown-item" href="#" id="cola">Cola</a></li>
+              <li><a class="dropdown-item" href="#" id="lista">Lista</a></li>
+            </ul>
+          </li>
+
+
         </ul>
       </div>
 
